--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -11,14 +11,16 @@
 
   <artifactId>health.profile.manager</artifactId>
   <packaging>bundle</packaging>
+  <!--
   <version>1.1.0</version>
+  -->
 
 
   <dependencies>
   	<dependency>
   		<groupId>org.universAAL.support</groupId>
   		<artifactId>itests</artifactId>
-<!--         <version>1.1.2-SNAPSHOT</version> -->
+        <version>1.1.2-SNAPSHOT</version>
   	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
@@ -58,7 +60,7 @@
 		      <plugin>
 		        <groupId>org.universAAL.support</groupId>
 		        <artifactId>uaal-maven-plugin</artifactId>
-		        <version>1.1.0</version>
+		        <version>1.1.2-SNAPSHOT</version>
 		      </plugin>
 		      <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
@@ -77,13 +79,17 @@
 	  		<groupId>org.universAAL.context</groupId>
 	  		<artifactId>ctxt.che</artifactId>
 	  		<version>1.1.0</version>
+            <!--
             <scope>provided</scope>
+            -->
 	  	</dependency>
         <dependency>
         	<groupId>org.universAAL.context</groupId>
             <artifactId>ctxt.prof.server</artifactId>
 	  		<version>1.1.0</version>
+            <!--
             <scope>provided</scope>
+            -->
         </dependency>
       </dependencies>
     </profile>
