--- a/agenda/agenda.runner/runner/felix/system.properties
+++ b/agenda/agenda.runner/runner/felix/system.properties
@@ -21,3 +21,5 @@ cyberdomo.ssdp.mx=5
 cyberdomo.ssdp.buffersize=2048
 cyberdomo.ssdp.port=13531
 org.osgi.service.http.port=8088
+#add to runner template?
+#org.apache.felix.http.session.timeout=0
