agenda runner - config files added 2

--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -58,18 +58,17 @@ felix.auto.start.5=\
 "file:bundles/ont.profile.health_1.1.0.jar" \
 "file:bundles/ont.impairment_1.1.0.jar" \
 "file:bundles/ui.dm_1.1.0.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.0.jar" \
+"file:bundles/ui.handler.gui.swing_1.1.2.110.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-spi_1.0.3.jar" \
 "file:bundles/security.authorizator_1.1.0.jar" \
 "file:bundles/ri.servicegateway_1.1.0.jar" \
-"file:bundles/ui.handler.web_1.1.0.jar" \
+"file:bundles/ui.handler.web_1.1.0.AGENDA.jar" \
 "file:bundles/agenda.ont_1.1.1.SNAPSHOT.jar" \
 "file:bundles/agenda.client_1.1.0.jar" \
 "file:bundles/wrap_mvn_activesoap_jaxp-api_1.3_0.jar" \
 "file:bundles/agenda.server_1.1.0.jar" \
-"file:bundles/wrap_mvn_com.googlecode.jinahya_ocap-api_1.2_0.jar" \
 "file:bundles/agenda.eventSelection.ont_1.1.1.SNAPSHOT.jar" \
 "file:bundles/agenda.eventSelection.client_1.1.0.jar" \
 "file:bundles/agenda.gui_1.1.0.jar" \
