--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -26,7 +26,6 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
-"file:bundles/com.mysql.jdbc_5.1.17.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/mw.container.xfaces_1.1.0.jar" \
@@ -42,12 +41,9 @@ felix.auto.start.5=\
 "file:bundles/mw.acl.upnp_1.1.0.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
 "file:bundles/mw.bus.model_1.1.0.jar" \
-"file:bundles/mw.bus.service_1.1.0.jar" \
 "file:bundles/mw.bus.ui_1.1.0.jar" \
 "file:bundles/mw.bus.context_1.1.0.jar" \
-"file:bundles/wrap_mvn_com.hp.hpl.jena_jena_2.5.4_0.jar" \
-"file:bundles/jena.osgi_1.0.0.jar" \
-"file:bundles/ctxt.jena.converter_1.1.0.jar" \
+"file:bundles/mw.bus.service_1.1.0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
@@ -57,16 +53,17 @@ felix.auto.start.5=\
 "file:bundles/ont.profile.userid_1.1.0.jar" \
 "file:bundles/ont.profile.health_1.1.0.jar" \
 "file:bundles/ont.impairment_1.1.0.jar" \
-"file:bundles/ui.dm_1.1.0.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.2.110.jar" \
+"file:bundles/ui.dm.mobile_1.1.0.2MODALITIES.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-spi_1.0.3.jar" \
 "file:bundles/security.authorizator_1.1.0.jar" \
 "file:bundles/ri.servicegateway_1.1.0.jar" \
-"file:bundles/ui.handler.web_1.1.0.AGENDA.jar" \
+"file:bundles/ui.handler.web_1.1.0.jar" \
+"file:bundles/ui.handler.gui_1.1.0.jar" \
 "file:bundles/agenda.ont_1.1.1.SNAPSHOT.jar" \
 "file:bundles/agenda.client_1.1.0.jar" \
+"file:bundles/com.mysql.jdbc_5.1.17.jar" \
 "file:bundles/wrap_mvn_activesoap_jaxp-api_1.3_0.jar" \
 "file:bundles/agenda.server_1.1.0.jar" \
 "file:bundles/agenda.eventSelection.ont_1.1.1.SNAPSHOT.jar" \
