agenda runner - DM name fix, jack user added

--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -60,7 +60,7 @@ felix.auto.start.5=\
 "file:bundles/security.authorizator_1.1.0.jar" \
 "file:bundles/ri.servicegateway_1.1.0.jar" \
 "file:bundles/ui.handler.web_1.1.0.jar" \
-"file:bundles/ui.handler.gui_1.1.0.jar" \
+"file:bundles/ui.handler.gui.swing_1.1.2.110.jar" \
 "file:bundles/agenda.ont_1.1.1.SNAPSHOT.jar" \
 "file:bundles/agenda.client_1.1.0.jar" \
 "file:bundles/com.mysql.jdbc_5.1.17.jar" \
