--- a/.gitattributes
+++ b/.gitattributes
@@ -420,6 +420,7 @@ agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_gui_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_hr.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_jack_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_jack_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_nutritionist_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_remoteUser_hr.txt -text
@@ -435,6 +436,8 @@ agenda/agenda.runner/runner/configurations/ui.dm/main_menu_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_gui_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_hr.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_es.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_nutritionist_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_remoteUser_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied.txt -text
