--- a/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
+++ b/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
@@ -1,3 +1,3 @@
 database=jdbc:mysql://localhost:3306/agendaUniversAALDB?useUnicode=yes&characterEncoding=UTF-8
-username=agendauser
-password=pass
+username=root
+password=sc2011
