agenda credentials note added

--- a/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
+++ b/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
@@ -1,3 +1,5 @@
 database=jdbc:mysql://localhost:3306/agendaUniversAALDB?useUnicode=yes&characterEncoding=UTF-8
-username=root
-password=sc2011
+#note that this user should exist (be created) in MySQL and given access to the agendauniversaaldb
+#not recommended workaround is to put here MySQL root user username and password which has access to all databases
+username=agendauser
+password=pass
