--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>agenda.runner</artifactId>
   <packaging>jar</packaging>  
-  <version>B.0.1-SNAPSHOT</version>
+  <version>B.0.2-SNAPSHOT</version>
   <!-- version is here equal to the level of version of the middleware -->
   <name>Runner Folder</name>
 
@@ -18,162 +18,12 @@
         <configuration>
           <args>pax.configuration</args>
           <provision>
-           <!-- Explanation: -->
-          <!-- <provision>{opt:wrap}:mvn:{groupId}/{artifactId}/{version}@{opt:#level | nostart | noupdate}</provision>-->
-          
-<!--IMPORTANT: For web handler random password is necessary!!!-->
-
-          <!--		RUN AGENDA	platform 1.1.0 compatible BEGIN -->
-	<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.1.0-2MODALITIES/composite</provision>
-	<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.0/composite</provision>
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.2-110/composite</provision>-->
-	<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.0/composite</provision>
-	<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/B.0.1-SNAPSHOT/composite</provision>
-
-<!--		RUN AGENDA	platform 1.1.0 compatible END -->
-	    
-<!--		RUN AGENDA	1.0.0 BEGIN -->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.AALapplicaton/agenda.composite/A.0.1-SNAPSHOT/composite</provision>-->
-<!--		RUN AGENDA	1.0.0 END -->
- 
-<!--RUN AGENDA	1.1.0 BEFORE COMPOSITES BEGIN -->
-		<!--
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>
-		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>
-	    <provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>
-	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>
-	    <provision>mvn:org.universAAL.ontology/agenda.ont/1.0.1-SNAPSHOT</provision>
-	    <provision>mvn:org.universAAL.ontology/agenda.eventSelection.ont/1.0.1-SNAPSHOT</provision>
-	    <provision>mvn:org.universAAL.AALapplication/agenda.client/A.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.server/A.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.gui/A.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.remote/A.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.eventSelection.client/A.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.eventSelection.server/A.0.1-SNAPSHOT</provision>		-->
-<!--RUN AGENDA	1.1.0 BEFORE COMPOSITES END -->
-
-<!--		RUN RESOURCE SERVER	BEGIN -->
-<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.resource.server/1.1.1-SNAPSHOT/composite</provision>-->
-<!--		RUN RESOURCE SERVER	END -->
-
-<!--		RUN MYEXAMPLE TEST	BEGIN-->
-		<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>-->
-		<!--<provision>mvn:org.universAAL.example/myexample.properties.handler/0.1.0-SNAPSHOT</provision>-->
-<!--		RUN MYEXAMPLE TEST END -->
-
-<!--RUN WEB HANDLER	BEGIN-->
-		<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>-->
-		<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
-		<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
-		<!--<provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>-->
-		<!--<provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
-		<!--<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
-		<!--<provision>org.universAAL.remote-interoperability/ri.servicegateway/1.0.2-SNAPSHOT</provision>-->
-		<!--<provision>mvn:org.universAAL.ontology/ont.phWorld/1.0.0</provision>-->
-		<!--<provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>-->
-		<!--<provision>mvn:org.universAAL.ui/ui.handler.web/1.0.2-SNAPSHOT</provision>-->
-		<!--<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
-		<!--<provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>-->
-<!--RUN WEB HANDLER	END-->
-
-<!--		RUN WEB HANDLER	with AUTHORIZATOR BEGIN-->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>mvn:org.universAAL.ontology/ont.profile/1.0.1-SNAPSHOT</provision>-->
-<!--<provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>-->
-<!--<provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
-<!--<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
-<!--<provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>-->
-<!--<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
-
-<!--		<provision>wrap:org.universAAL.samples/service.utils/0.3.0-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.ui/security.authorizator/1.0.2-SNAPSHOT</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.remote-interoperability/ri.servicegateway/1.0.2-SNAPSHOT/composite</provision>-->
-<!--		<provision>mvn:org.universAAL.ui/ui.handler.web/1.0.2-SNAPSHOT</provision>-->
-<!--		RUN WEB HANDLER	with AUTHORIZATOR END-->
-		
-
-<!--RUN SMS HANDLER	START-->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
-			<!--<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
-			
-			<!--<provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>  -->
-			<!--<provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>  -->
-			<!--<provision>wrap:mvn:org.universAAL.support/jena.osgi/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.middleware/mw.container.xfaces/1.0.1-SNAPSHOT</provision>-->
-			<!--<provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
-			
-			<!--<provision>wrap:mvn:jp.go.ipa/jgcl/1.0</provision>-->
-			<!--<provision>wrap:mvn:java3d/vecmath/1.3.1</provision>-->
-			<!--<provision>wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.profile/1.0.1-SNAPSHOT</provision>-->
-			
-			<!--<provision>wrap:mvn:java3d/j3d-core/1.3.1</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.phWorld/1.0.1-SNAPSHOT</provision>-->
-			
-			<!--<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
-			
-			<!--<provision>mvn:org.universAAL.ui/ui.handler.sms/1.0.2-SNAPSHOT</provision>-->
-			<!--<provision>mvn:org.universAAL.ui/ui.handler.sms.tester/1.0.2-SNAPSHOT</provision>-->
-<!--		RUN SMS HANDLER	END--> 
-
-<!--		RUN HANDLERS  BEGIN--> 
-<!--	   <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.1.1-SNAPSHOT/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.1-SNAPSHOT/composite</provision>-->
-<!--	   <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.1-SNAPSHOT/composite</provision>-->
-<!--		RUN HANDLERS  END--> 
-
-<!-- DEFAULT VALUES FOR 1.1.0 RELEASE START -->
-        <!-- MW -->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/1.1.0/composite</provision>-->
-		<!-- Ontologies -->
-			<!--<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/1.1.0/composite</provision>-->
-		<!-- Platform -->
-			<!-- <provision>scan-composite:mvn:org.universAAL.context/ctxt.che/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.context/ctxt.che.mobile/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.0/composite</provision-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.0/composite</provision>-->
-		<!-- Services -->
-			<!-- <provision>scan-composite:mvn:org.universAAL.samples/smp.lighting.server/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.samples/smp.lighting.client/1.1.0/composite</provision>-->
-			<!-- <provision>scan-composite:mvn:org.universAAL.samples/smp.heating/1.1.0/composite</provision>-->
-<!-- DEFAULT VALUES FOR 1.1.0 RELEASE END -->										
-	
-<!-- DEFAULT VALUES FOR 1.0.0 RELEASE START -->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>-->
-		<!-- Ontologies -->
-			<!--<provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.risk/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.lighting/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.ontology/ont.weather/1.0.0</provision>-->
-		<!-- Platform -->
-			<!--<provision>scan-composite:mvn:org.universAAL.context/ctxt.che/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.context/ctxt.che.mobile/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision>-->
-			<!--<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision>-->
-		<!-- Services --> 
-			<!--<provision>mvn:org.universAAL.samples/smp.lighting.server/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.samples/smp.lighting.client/1.0.0</provision>-->
-			<!--<provision>mvn:org.universAAL.samples/smp.heating/1.0.0</provision>-->
-<!-- DEFAULT VALUES FOR 1.0.0 RELEASE END -->
+			<!--ui.dm.mobile/1.1.3-SNAPSHOT/ has saied for Modality.gui and jack for Modality.web-->
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.1.3-SNAPSHOT/composite</provision> 
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.3/composite</provision>
+			<provision>mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.3-SNAPSHOT</provision>
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.0/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/B.0.1-SNAPSHOT/composite</provision>
 	 </provision>
         </configuration>	
       </plugin>    	
