--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -53,14 +53,15 @@ felix.auto.start.5=\
 "file:bundles/ont.profile.userid_1.1.0.jar" \
 "file:bundles/ont.profile.health_1.1.0.jar" \
 "file:bundles/ont.impairment_1.1.0.jar" \
-"file:bundles/ui.dm.mobile_1.1.0.2MODALITIES.jar" \
+"file:bundles/ui.dm.mobile_1.1.3.SNAPSHOT.jar" \
+"file:bundles/ui.handler.gui.swing_1.1.3.jar" \
+"file:bundles/ui.handler.gui.swing_1.1.3.SNAPSHOT.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-spi_1.0.3.jar" \
 "file:bundles/security.authorizator_1.1.0.jar" \
 "file:bundles/ri.servicegateway_1.1.0.jar" \
 "file:bundles/ui.handler.web_1.1.0.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.2.110.jar" \
 "file:bundles/agenda.ont_1.1.1.SNAPSHOT.jar" \
 "file:bundles/agenda.client_1.1.0.jar" \
 "file:bundles/com.mysql.jdbc_5.1.17.jar" \
@@ -76,3 +77,5 @@ felix.auto.start.5=\
 # System properties
 ##############################
 maven.test.skip=true
+http.proxyPort=8080
+http.proxyHost=s-proxy.ericsson.se
