--- a/agenda/agenda.client/pom.xml
+++ b/agenda/agenda.client/pom.xml
@@ -2,16 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
+		<version>B.0.2-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
+	
 	<artifactId>agenda.client</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Client</name>
 	<description>Agenda Consumer, used by Agenda GUI</description>
+	
 	<dependencies>
 		<!--		<dependency>-->
 		<!--			<groupId>junit</groupId>-->
@@ -50,6 +53,7 @@
 			<artifactId>agenda.ont</artifactId>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -62,25 +66,8 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Activator>org.universAAL.agenda.client.osgi.Activator</Bundle-Activator>
+<!--						these 2 packages have to be exported because they are used (imported) by agenda.gui-->
 						<Export-Package>org.universAAL.agenda.client, org.universAAL.agenda.client.osgi</Export-Package>
-<!--						<Import-Package>-->
-<!--							org.universAAL.agenda.client.osgi,-->
-<!--							javax.xml.datatype, -->
-<!--							org.osgi.service.log,-->
-<!--							org.universAAL.ontology.location.address,-->
-<!--							org.universAAL.ontology.location.outdoor-->
-<!--							javax.swing,org.osgi.framework,-->
-<!--							org.universAAL.agenda.ont,-->
-<!--							org.universAAL.agenda.ont.service,-->
-<!--							org.slf4j,org.universAAL.middleware.context,-->
-<!--							org.universAAL.middleware.owl, -->
-<!--							org.universAAL.middleware.rdf,-->
-<!--						-->
-<!--							org.universAAL.middleware.service,-->
-<!--							org.universAAL.middleware.service.owl,-->
-<!--							org.universAAL.middleware.service.owls.process,-->
-<!--							org.universAAL.ontology.profile-->
-<!--						</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
