--- a/agenda/agenda.eventSelection.ont/pom.xml
+++ b/agenda/agenda.eventSelection.ont/pom.xml
@@ -2,30 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.pom</artifactId>
 		<version>1.1.0</version>
 		<relativePath>../pom</relativePath>
 	</parent>
+
 	<artifactId>agenda.eventSelection.ont</artifactId>
 	<version>1.1.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+
 	<name>Agenda AAL Service Event Selection Tool Ontology</name>
-	<description />
+
 	<properties>
 		<ignore.dep.conflict>true</ignore.dep.conflict>
-	</properties>	
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>agenda.ont</artifactId>
 			<version>1.1.1-SNAPSHOT</version>
-		</dependency>	
-<!--		<dependency>-->
-<!--			<groupId>junit</groupId>-->
-<!--			<artifactId>junit</artifactId>-->
-<!--		</dependency>-->
+		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>junit</groupId>-->
+		<!--			<artifactId>junit</artifactId>-->
+		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -54,17 +57,29 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 		</dependency>
-		
-		<!--	below 2 dependencies added instead of	${java.home}\lib\rt.jar-->
-		<!--		dependency for javax.xml.datatype-->
-		<dependency>
-			<groupId>activesoap</groupId>
-			<artifactId>jaxp-api</artifactId>
-			<version>1.3</version>
-		</dependency>
+
+		<!--
+			below dependency has javax.xml.datatype like ${java.home}\lib\rt.jar
+		-->
+		<!--		<dependency>-->
+		<!--			<groupId>activesoap</groupId>-->
+		<!--			<artifactId>jaxp-api</artifactId>-->
+		<!--			<version>1.3</version>-->
+		<!--		</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
+<!--		for javax.xml.datatype.XMLGregorianCalendar; pass compiler arguments to the javac compiler-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArguments>
+						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
+					</compilerArguments>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -75,21 +90,12 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Activator>org.universAAL.ontology.agendaEventSelection.osgi.Activator</Bundle-Activator>
-						<Export-Package>org.universAAL.ontology.agendaEventSelection.*</Export-Package>
+						<Export-Package>org.universAAL.ontology.agendaEventSelection,
+							org.universAAL.ontology.agendaEventSelection.service</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
-            
-			<!--			<plugin>-->
-			<!--				<groupId>org.apache.maven.plugins</groupId>-->
-			<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-			<!--				<configuration>-->
-			<!--					<compilerArguments>-->
-			<!--						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>-->
-			<!--					</compilerArguments>-->
-			<!--				</configuration>-->
-			<!--			</plugin>-->
 
 		</plugins>
-    </build>
+	</build>
 </project>
