--- a/agenda/agenda.eventSelection.server/pom.xml
+++ b/agenda/agenda.eventSelection.server/pom.xml
@@ -2,16 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
+		<version>B.0.2-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
+
 	<packaging>bundle</packaging>
 	<artifactId>agenda.eventSelection.server</artifactId>
 	<name>Agenda AAL Service Event Selection Tool Server</name>
 	<description>A server based on the domain ontology of event services</description>
+
 	<dependencies>
 		<!--		<dependency>-->
 		<!--			<groupId>junit</groupId>-->
@@ -61,6 +64,18 @@
 	</dependencies>
 	<build>
 		<plugins>
+
+<!--		for javax.xml.datatype.XMLGregorianCalendar; pass compiler arguments to the javac compiler-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArguments>
+						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
+					</compilerArguments>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -71,55 +86,22 @@
 						<Bundle-Activator>org.universAAL.agendaEventSelectionTool.server.osgi.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package> org.universAAL.agendaEventSelectionTool.server</Export-Package>
+						<Export-Package>org.universAAL.agendaEventSelectionTool.server</Export-Package>
 						<Private-Package>org.universAAL.agendaEventSelectionTool.server.impl,
-							org.universAAL.agendaEventSelectionTool.database, org.universAAL.agendaEventSelectionTool.server.osgi</Private-Package>
+							org.universAAL.agendaEventSelectionTool.database,
+							org.universAAL.agendaEventSelectionTool.server.osgi</Private-Package>
 						<!--
-							although by default all packages should be automatically imported
-							(and added to MANIFEST) when not explicitly having Import-Package
-							section, this is for some reason not the case for com.mysql.jdbc
-							in this bundle.
-							com.mysql.jdbc is forced to import package list while "*" ensures that all other packages are automatically included
+							com.mysql.jdbc is included in mysql-connector-java library which
+							is not a bundle but only a library and hence there is no bundle
+							that exports that package. com.mysql.jdbc is forced to import by
+							Import-package while "*" ensures that all other packages are
+							automatically included
 						-->
-					
 						<Import-Package>com.mysql.jdbc, * </Import-Package>
-						
-<!--						<Import-Package>-->
-<!--							org.universAAL.middleware.container,-->
-<!--							org.universAAL.middleware.container.osgi,-->
-<!--							org.universAAL.middleware.container.osgi.util,-->
-<!--							org.universAAL.middleware.container.utils,-->
-<!--							org.universAAL.middleware.context,-->
-<!--							org.universAAL.middleware.context.owl,-->
-<!--							org.universAAL.middleware.owl,-->
-<!--							org.universAAL.middleware.rdf,-->
-<!--							org.universAAL.middleware.rdf.impl,-->
-<!--							org.universAAL.middleware.service,-->
-<!--							org.universAAL.middleware.service.owls.process,-->
-<!--							org.universAAL.middleware.service.owls.profile,-->
-<!---->
-<!--							org.universAAL.ontology.agenda,-->
-<!--							org.universAAL.ontology.agenda.service,-->
-<!--							org.universAAL.ontology.agendaEventSelection,-->
-<!--							org.universAAL.ontology.agendaEventSelection.service,-->
-<!---->
-<!--							java.sql.*,-->
-<!--							org.osgi.framework,-->
-<!--							com.mysql.jdbc,-->
-<!--							javax.xml.datatype,-->
-<!--							org.slf4j</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
-			<!--			<plugin>-->
-			<!--				<groupId>org.apache.maven.plugins</groupId>-->
-			<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-			<!--				<configuration>-->
-			<!--					<compilerArguments>-->
-			<!--						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>-->
-			<!--					</compilerArguments>-->
-			<!--				</configuration>-->
-			<!--			</plugin>-->
+
 		</plugins>
 	</build>
 </project>
