--- a/agenda/agenda.gui/pom.xml
+++ b/agenda/agenda.gui/pom.xml
@@ -1,17 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
+		<version>B.0.2-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
+	
 	<artifactId>agenda.gui</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service GUI</name>
-	<description>	Agenda GUI 	</description>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -56,12 +57,12 @@
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agenda.client</artifactId>
-			<version>B.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agenda.eventSelection.client</artifactId>
-			<version>B.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -82,30 +83,30 @@
 							org.universAAL.agenda.gui.impl,
 							org.universAAL.agenda.gui.components,
 							org.universAAL.agenda.gui.osgi</Private-Package>
-						<Import-Package>
-							org.universAAL.middleware.rdf,
-							org.universAAL.middleware.owl,
-							org.universAAL.middleware.rdf.impl,
-							org.universAAL.middleware.util,
-							org.universAAL.middleware.container,
-							org.universAAL.middleware.container.osgi,
-							org.universAAL.middleware.container.utils,
-							org.universAAL.middleware.context,
-							org.universAAL.middleware.service.owl,
-							org.universAAL.middleware.service.owls.profile,
-							org.universAAL.middleware.service,
-							org.universAAL.agenda.client,
-							org.universAAL.agenda.client.osgi,
-							org.universAAL.ontology.profile,
-							org.universAAL.ontology.agenda,
-							org.universAAL.ontology.agendaEventSelection,
-							org.universAAL.agendaEventSelectionTool.client,
-							org.universAAL.ontology.agenda.service,
-							org.universAAL.ontology.location.address,
-							javax.xml.datatype,
-							javax.swing,
-							org.osgi.framework,
-							*</Import-Package>
+<!--						<Import-Package>-->
+<!--							org.universAAL.middleware.rdf,-->
+<!--							org.universAAL.middleware.owl,-->
+<!--							org.universAAL.middleware.rdf.impl,-->
+<!--							org.universAAL.middleware.util,-->
+<!--							org.universAAL.middleware.container,-->
+<!--							org.universAAL.middleware.container.osgi,-->
+<!--							org.universAAL.middleware.container.utils,-->
+<!--							org.universAAL.middleware.context,-->
+<!--							org.universAAL.middleware.service.owl,-->
+<!--							org.universAAL.middleware.service.owls.profile,-->
+<!--							org.universAAL.middleware.service,-->
+<!--							org.universAAL.agenda.client,-->
+<!--							org.universAAL.agenda.client.osgi,-->
+<!--							org.universAAL.ontology.profile,-->
+<!--							org.universAAL.ontology.agenda,-->
+<!--							org.universAAL.ontology.agendaEventSelection,-->
+<!--							org.universAAL.agendaEventSelectionTool.client,-->
+<!--							org.universAAL.ontology.agenda.service,-->
+<!--							org.universAAL.ontology.location.address,-->
+<!--							javax.xml.datatype,-->
+<!--							javax.swing,-->
+<!--							org.osgi.framework,-->
+<!--							*</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
