--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -1,32 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
+<!--		B.0 version has all platform dependencies 1.1.0 (B.1 has platform components 1.1.1-SNAPSHOT)-->
 		<version>B.0</version>
 		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
+	
 	<artifactId>agenda.pom</artifactId>
-	<version>B.0.1-SNAPSHOT</version>
+	<version>B.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
 	<name>Agenda AAL Service Parent POM</name>
 	<description>Contains repository, deployment, and other info for Agenda	AAL Application</description>
 	<url>http://forge.universaal.org/wiki/new_services:Agenda_universAAL_service</url>
+	
 	<issueManagement>
 		<system>GForge - Tracker</system>
 		<url>http://forge.universaal.org/gf/project/new_services/tracker/?action=TrackerItemBrowse&amp;tracker_id=226
 		</url>
 	</issueManagement>
+	
 	<scm>
 		<connection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/agenda</connection>
 		<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/agenda</developerConnection>
 	</scm>
+	
 	<properties>
 		<service.name.svn>agenda</service.name.svn>
 		<ignore.dep.conflict>true</ignore.dep.conflict>
-		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<modules>
@@ -50,36 +55,6 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.middleware</groupId>-->
-<!--				<artifactId>mw.data.representation</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.middleware</groupId>-->
-<!--				<artifactId>mw.bus.context</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.middleware</groupId>-->
-<!--				<artifactId>mw.bus.service</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.middleware</groupId>-->
-<!--				<artifactId>mw.bus.io</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.ontology</groupId>-->
-<!--				<artifactId>ont.profile</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
-<!--			<dependency>-->
-<!--				<groupId>org.universAAL.ontology</groupId>-->
-<!--				<artifactId>ont.phWorld</artifactId>-->
-<!--				<version>1.0.0</version>-->
-<!--			</dependency>-->
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>agenda.ont</artifactId>
@@ -90,8 +65,39 @@
 				<artifactId>agenda.eventSelection.ont</artifactId>
 				<version>1.1.1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.server</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.gui</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.remote</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.eventSelection.server</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.AALapplication</groupId>
+				<artifactId>agenda.eventSelection.client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
 	<build>
 		<plugins>
 			<plugin>
