--- a/agenda/agenda.remote/pom.xml
+++ b/agenda/agenda.remote/pom.xml
@@ -1,22 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>B.0.2-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
-	
+
 	<artifactId>agenda.remote</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Remote</name>
 	<description>Agenda remote is used for generating form for web handler,
 	 handle events from Web Handler and to communicate with Agenda Server 
-	 Component. It provides a web interface for external users to view and insert 
-	 events in the Agenda</description>
-	 
+	 Component. It provides a web interface for external users to view, insert and delete 
+	 Agenda Events</description>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -78,5 +78,5 @@
 			<!--			</plugin>-->
 		</plugins>
 	</build>
-	
+
 </project>
