--- a/agenda/agenda.runner/runner/configurations/agenda/DBquery.properties
+++ b/agenda/agenda.runner/runner/configurations/agenda/DBquery.properties
@@ -14,6 +14,7 @@ addCalendar = INSERT INTO agendaUniversAALDB.CalendarType (`Description`, `idUse
 getCalendarsByUser = SELECT * FROM agendaUniversAALDB.CalendarType c, agendaUniversAALDB.Users u WHERE c.idUser=u.idUser AND u.Username=?;
 getAllCalendarsWithUser = SELECT c.idCalendar, c.Description, c.idUser FROM agendaUniversAALDB.CalendarType c;
 getAllCalendarURI = select c.idCalendar FROM agendaUniversAALDB.CalendarType c;
+getCalOwnerName=SELECT c.Description, u.UserName FROM agendaUniversAALDb.CalendarType c, agendaUniversAALDb.Users u WHERE u.idUser=c.idUser AND c.Description=?;
 
 getCurrentReminders = SELECT e.idEvent FROM agendaUniversAALDB.Reminder r, agendaUniversAALDB.Event e WHERE e.idReminder=r.idReminder AND r.StartTime>=? AND r.StartTime<?;
 getStartingEvents = SELECT e.idEvent FROM agendaUniversAALDB.Event e WHERE e.StartTime>=? AND e.StartTime<?;
