--- a/.gitattributes
+++ b/.gitattributes
@@ -86,6 +86,7 @@ agenda/agenda.gui/src/main/resources/icons/close_hover_icon.jpg -text
 agenda/agenda.gui/src/main/resources/icons/close_icon.jpg -text
 agenda/agenda.gui/src/main/resources/icons/close_pressed_icon.jpg -text
 agenda/agenda.gui/src/main/resources/icons/icon_danger_small.jpg -text
+agenda/agenda.gui/src/main/resources/icons/info.txt -text
 agenda/agenda.gui/src/main/resources/icons/medium_button.jpeg -text
 agenda/agenda.gui/src/main/resources/icons/medium_button_grey.jpeg -text
 agenda/agenda.gui/src/main/resources/icons/medium_button_pressed.jpeg -text
