--- a/safety_home/safety_home.service.humiditySensorProvider/pom.xml
+++ b/safety_home/safety_home.service.humiditySensorProvider/pom.xml
@@ -1,16 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
-		<artifactId>safety_home.pom</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
-	</parent> 
+  <modelVersion>4.0.0</modelVersion> 
+  <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>safety_home.service.humiditySensorProvider</artifactId>
+  <version>1.0.3-SNAPSHOT</version>
   <name>Safety at Home Humidity Sensor Provider</name>
   <description>Safety at Home Humidity Sensor Provider</description>
   <packaging>bundle</packaging>
-  <inceptionYear>2011</inceptionYear>  
+  <inceptionYear>2012</inceptionYear>  
   <licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -27,27 +23,27 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>ont.safetyDevices</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>1.0.3-SNAPSHOT</version>
 		</dependency>		
 	</dependencies>
     <build>
@@ -66,24 +62,42 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.3.2</version>
-					<inherited>true</inherited>
-					<configuration>
-						<source>${maven.compile.source}</source>
-						<target>${maven.compile.target}</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>maven-bundle-plugin</artifactId>
-					<version>2.3.5</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
+		<repositories>
+			<repository>
+				<id>central</id>
+				<name>Central Maven Repository</name>
+				<url>http://repo1.maven.org/maven2</url>
+				<snapshots>
+					<enabled>false</enabled>
+				</snapshots>
+			</repository>
+			<repository>
+				<id>apache-snapshots</id>
+				<name>Apache Snapshots</name>
+				<url>http://people.apache.org/repo/m2-snapshot-repository</url>
+				<releases>
+					<enabled>false</enabled>
+				</releases>
+				<snapshots>
+					<updatePolicy>daily</updatePolicy>
+				</snapshots>
+			</repository>
+			<repository>
+				<id>uaal</id>
+				<name>universAAL Repositories</name>
+				<url>http://depot.universaal.org/maven-repo/releases/</url>
+				<snapshots>
+					<enabled>false</enabled>
+				</snapshots>
+			</repository>
+			<repository>
+				<id>uaal-snapshots</id>
+				<name>universAAL Snapshot Repositories</name>
+				<url>http://depot.universaal.org/maven-repo/snapshots/</url>
+				<releases>
+					<enabled>false</enabled>
+				</releases>
+			</repository>
+		</repositories>
 </project>
