--- a/safety_home/pom/pom.xml
+++ b/safety_home/pom/pom.xml
@@ -3,25 +3,29 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>B.1</version>
     <relativePath>../../new_services.pom</relativePath>
   </parent>
+  
   <artifactId>safety_home.pom</artifactId>
   <version>1.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Safety Home AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Safety_Home_universAAL_service</url>
+  
   <licenses>
 	<license>
 	<name>Apache 2.0</name>
 	<url>http://www.apache.org/licenses/</url>
 	</license>
   </licenses>
+  
   <issueManagement>
   	<system>GForge - Tracker</system>
   	<!--<url>http://forge.universaal.org/gf/project/new_services/tracker/?action=TrackerItemBrowse&amp;tracker_id=</url>-->
   </issueManagement>
   <inceptionYear>2011</inceptionYear>
+  
   <scm>
   	<connection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/safety_home</connection>
   	<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/safety_home</developerConnection>
@@ -38,4 +42,5 @@
   	<module>../safety_home.service.motionSensorProvider</module>
   	<module>../safety_home.service.smokeDetectionProvider</module>
   </modules>
+
 </project>
