--- a/safety_home/safety_home.service.smartCardProvider/.settings/org.eclipse.m2e.core.prefs
+++ b/safety_home/safety_home.service.smartCardProvider/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-#Thu Feb 09 16:17:27 EET 2012
+#Fri Jul 06 10:19:20 CEST 2012
 activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
