--- a/safety_home/safety_home.service.smokeDetectionProvider/pom.xml
+++ b/safety_home/safety_home.service.smokeDetectionProvider/pom.xml
@@ -8,9 +8,7 @@
   	<relativePath>../pom/</relativePath>
   </parent>
  
-  <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>safety_home.service.smokeDetectionProvider</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
   <name>Safety at Home Smoke Detection Provider</name>
   <description>Safety at Home Smoke Detection Provider</description>
   <packaging>bundle</packaging>
@@ -26,28 +24,23 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>ont.safetyDevices</artifactId>
@@ -66,6 +59,9 @@
 						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.smokeDetectionProvider.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>
+						org.universAAL.AALapplication.safety_home.service.smokeDetectionProvider, org.universAAL.AALapplication.safety_home.service.smokeDetectionSoapClient 
+						</Export-Package> 
 					</instructions>
 				</configuration>
 			</plugin>
