--- a/food_shopping/ont.foodDevices/.settings/org.eclipse.jdt.core.prefs
+++ b/food_shopping/ont.foodDevices/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,6 @@
-#Fri Jul 06 11:40:28 CEST 2012
+#Wed Jul 11 19:04:48 CEST 2012
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.4
+org.eclipse.jdt.core.compiler.compliance=1.4
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.4
