--- a/safety_home/safety_home.service.server/pom.xml
+++ b/safety_home/safety_home.service.server/pom.xml
@@ -103,7 +103,11 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Export-Package>
+						<Bundle-Name>${project.name}</Bundle-Name>
+						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.server.Activator</Bundle-Activator>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+<!-- 						<Export-Package>
 						org.universAAL.AALapplication.safety_home.service.humiditySensorProvider, org.universAAL.AALapplication.safety_home.service.humiditySensorSoapClient, 
 						org.universAAL.AALapplication.safety_home.service.lightSensorProvider, org.universAAL.AALapplication.safety_home.service.lightSensorSoapClient, 
 						org.universAAL.AALapplication.safety_home.service.motionSensorProvider, org.universAAL.AALapplication.safety_home.service.motionSensorSoapClient, 
@@ -111,13 +115,9 @@
 						org.universAAL.AALapplication.safety_home.service.smokeDetectionProvider, org.universAAL.AALapplication.safety_home.service.smokeDetectionSoapClient, 
 						org.universAAL.AALapplication.safety_home.service.temperatureSensorProvider, org.universAAL.AALapplication.safety_home.service.temperatureSensorSoapClient, 
 						org.universAAL.AALapplication.safety_home.service.windowProvider, org.universAAL.AALapplication.safety_home.service.windowSoapClient
-						</Export-Package>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.server.Activator</Bundle-Activator>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.AALapplication.safety_home.service.server</Export-Package>
-            			<Private-Package>org.universAAL.AALapplication</Private-Package>
+						</Export-Package>  -->
+						<Export-Package>org.universAAL.AALapplication.safety_home.service.server, org.universAAL.AALapplication.safety.service.server.DeviceHandlers</Export-Package>
+						<!--  , org.universAAL.AALapplication.safety_home.server.unit_impl --> 
 					</instructions>
 				</configuration>
 			</plugin>
