--- a/agenda/agenda.eventSelection.ont/pom.xml
+++ b/agenda/agenda.eventSelection.ont/pom.xml
@@ -2,52 +2,78 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0</version>
 		<relativePath>../pom</relativePath>
 	</parent>
-
-	<artifactId>agenda.eventSelection.ont</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<artifactId>ont.agendaEventSelection</artifactId>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-
 	<name>Agenda AAL Service Event Selection Tool Ontology</name>
-
-	<properties>
-		<ignore.dep.conflict>true</ignore.dep.conflict>
-	</properties>
+	<description>Ontology for selecting Agenda and Reminders AAL service events</description>
+	<build>
+		<plugins>
+			<!--
+				for javax.xml.datatype.XMLGregorianCalendar; pass compiler arguments
+				to the javac compiler
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArguments>
+						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
+					</compilerArguments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>${project.name}</Bundle-Name>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>org.universAAL.ontology.agendaEventSelection,
+							org.universAAL.ontology.agendaEventSelection.service</Export-Package>
+						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
+	    <dependency>
+      <groupId>org.universAAL.support</groupId>
+      <artifactId>itests</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>agenda.ont</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
+			<artifactId>ont.agenda</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>junit</groupId>-->
-		<!--			<artifactId>junit</artifactId>-->
-		<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.apache.felix</groupId>-->
+<!--			<artifactId>org.osgi.core</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.apache.felix</groupId>-->
+<!--			<artifactId>org.osgi.compendium</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.universAAL.middleware</groupId>-->
+<!--			<artifactId>mw.bus.context.core</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.service.core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
+			<artifactId>mw.data.representation.core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -67,35 +93,5 @@
 		<!--			<version>1.3</version>-->
 		<!--		</dependency>-->
 	</dependencies>
-	<build>
-		<plugins>
-<!--		for javax.xml.datatype.XMLGregorianCalendar; pass compiler arguments to the javac compiler-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
-					</compilerArguments>
-				</configuration>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Activator>org.universAAL.ontology.agendaEventSelection.osgi.Activator</Bundle-Activator>
-						<Export-Package>org.universAAL.ontology.agendaEventSelection,
-							org.universAAL.ontology.agendaEventSelection.service</Export-Package>
-					</instructions>
-				</configuration>
-			</plugin>
 
-		</plugins>
-	</build>
 </project>
